Added the feature of getting only user listings

--- a/html_Files/Listing.html
+++ b/html_Files/Listing.html
@@ -26,12 +26,15 @@
   <main> <a href="about.html">About</a></main>
   <footer></footer> -->
 
-    <!-- For the Developer Copy Start from here  line 148-->
     <header class="HomePage_header">
-        <h1>Home Genie</h1>
+        <div class="LogoContainer">
+            <a href="index.html">
+                <img src="../img/Home_Genie_DK_Logo.png" alt="Home Genie Logo">
+            </a>
+        </div>
         <div class="Menu_BellIconContainer">
             <a href="#" id="ShowNotificationPopUp">
-                <i title="Show Notifications" class="fas fa-bell"></i>
+                <img src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
             <a href="#" id="ShowMenu">
                 <i title="Show Menu" class="fas fa-bars"></i>
@@ -39,7 +42,7 @@
         </div>
         <div class="dk-menu">
             <a href="#" id="dk-ShowNotificationPopUp">
-                <i title="Show Notifications" class="fas fa-bell"></i>
+                <img src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
             <ul>
                 <li>
@@ -85,7 +88,7 @@
                         aria-hidden="true"></i> Browse Listings</a>
             </li>
             <li>
-                <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create New Listing</a>
+                <a href="#"> <i class="fa fa-list" aria-hidden="true"></i> Create New Listing</a>
             </li>
             <li>
                 <a href="#"><i class="fas fa-eye"></i> View Your Listing</a>
@@ -127,52 +130,11 @@
     <!-- Till here -->
 
     <main class="Listing_Main_Container">
-
         <div class="main-parent-title">
             <h2 id="main_Title"></h2>
         </div>
         <div class="Category_Listing_Container">
         </div>
-
-        <div class="Category_Listing_Container">
-            <div class="Category_Listing_Container">
-            </div>
-        </div>
-        <!-- <div class="OwnerListingPage">
-            <h2 id="OwnListing_Title"></h2>
-            <div class="card">
-                <img src="https://picsum.photos/500/250?random=11" alt="random image">
-                <h3>Listing Title</h3>
-                <p>Posted By <span>Lorem Ipsum</span></p>
-                <div class="browseBtn_Container">
-                    <a href="#" class="browseBtn">View Listing</a>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://picsum.photos/500/250?random=13" alt="random image">
-                <h3>Listing Title</h3>
-                <p>Posted By <span>Lorem Ipsum</span></p>
-                <div class="browseBtn_Container">
-                    <a href="#" class="browseBtn">View Listing</a>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://picsum.photos/500/250?random=12" alt="random image">
-                <h3>Listing Title</h3>
-                <p>Posted By <span>Lorem Ipsum</span></p>
-                <div class="browseBtn_Container">
-                    <a href="#" class="browseBtn">View Listing</a>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://picsum.photos/500/250?random=14" alt="random image">
-                <h3>Listing Title</h3>
-                <p>Posted By <span>Lorem Ipsum</span></p>
-                <div class="browseBtn_Container">
-                    <a href="#" class="browseBtn">View Listing</a>
-                </div>
-            </div>
-        </div> -->
     </main>
     <footer class="footer_Area">
         <div class="mb_footer">
