--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -77,7 +77,7 @@
           <a href="CreateListing.html">Create</a>
         </li>
         <li>
-          <a href="">View listings</a>
+          <a id="ViewListing">View listings</a>
         </li>
         <li>
           <a href="AboutUs.html">About Us</a>
