--- a/html_Files/UpdateProfile.html
+++ b/html_Files/UpdateProfile.html
@@ -21,210 +21,60 @@
 </head>
 
 <body>
-    <header class="HomePage_header">
-        <div class="LogoContainer">
-            <a href="index.html">
-                <img src="../img/Home_Genie_DK_Logo.png" alt="Home Genie Logo">
-            </a>
-        </div>
-        <div class="Menu_BellIconContainer">
-            <a href="#" id="ShowNotificationPopUp">
-                <img src="../img/Notification_Genie.png" alt="Notification Genie">
-            </a>
-            <a href="#" id="ShowMenu">
-                <i title="Show Menu" class="fas fa-bars"></i>
-            </a>
-        </div>
-        <div class="dk-menu">
-            <ul>
-                <li>
-                    <a href="#" id="dk-ShowNotificationPopUp">
-                        <img src="../img/Notification_Genie.png" alt="Notification Genie">
-                    </a>
-                </li>
-                <li>
-                    <a href="BrowseListings.html">Browse</a>
-                </li>
-                <li>
-                    <a href="CreateListing.html">Create</a>
-                </li>
-                <li>
-                    <a href="">View listings</a>
-                </li>
-                <li>
-                    <a href="AboutUs.html">About Us</a>
-                </li>
-                <li>
-                    <a href="#" class="ProfileIcon">
-                        <i title="Profile" class="far fa-user-circle"></i>
-                    </a>
-                    <div class="subProfileMenu">
-                        <ul>
-                            <li>
-                                <a href="UpdateProfile.html">Profile</a>
-                            </li>
-                            <li>
-                                <a href="Login.html">Logout</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </header>
-
-    <!-- <div class="mb-nav_wrapper"></div> -->
-    <nav class="mb-menu" id="showHideMenu">
-        <ul>
-            <!-- Add Links to the Pages when created -->
-            <li>
-                <a href="index.html"><i class="fas fa-home"></i> Home</a>
-            </li>
-            <li>
-                <a href="BrowseListings.html"><i class="fas fa-browser"></i><i class="fa fa-list"
-                        aria-hidden="true"></i> Browse
-                    Listings</a>
-            </li>
-            <li>
-                <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create New Listing</a>
-            </li>
-            <li>
-                <a href="#"><i class="fas fa-eye"></i> View Your Listing</a>
-            </li>
-            <li>
-                <a href="AboutUs.html"><i class="fa fa-users" aria-hidden="true"></i> About Us</a>
-            </li>
-            <li>
-                <a href="UpdateProfile.html">
-                    <i class="fa fa-user" aria-hidden="true"></i> Profile</a>
-            </li>
-            <li>
-                <a href="Login.html"><strong><i class="fas fa-eye"></i> Logout?</strong></a>
-            </li>
-        </ul>
-    </nav>
-
-    <div class="Notification_wrapper">
-        <div class="NotificationPopUpContainer">
-            <div class="NotificationPopUp">
-                <div class="Notification_id1">
-                    <h3>Listing Name</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
-                    <div>
-                        <button>View Listing</button>
-                    </div>
-                </div>
-                <div class="Notification_id1">
-                    <h3>Listing Name</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
-                    <div>
-                        <button>View Listing</button>
-                    </div>
+    <main>
+        <div class="UpdateProfilePageWrapper">
+            <div class="dk_layoutWrapper">
+                <div class="text_logoWrapper">
+                    <img id="homeGenieBigLogo" src="../img/Home_Genie_Logo_Profile.png" alt="Home Genie Full logo">
+                    <img id="Text_Logo" src="../img/Home_Genie_Text_UpdateProfile.png" alt="Home Genie Text logo">
+                    <h1>Add More to you profile?</h1>
+                    <img id="Home_GenieDKLogo" src="../img/Home_Genie_DK_Logo.png" alt="Home Genie dk Logo">
+                    <a href="index.html">Back to home</a>
                 </div>
             </div>
-            <div class="triangle"></div>
-        </div>
-    </div>
-    <!-- Till here -->
-    <main>
-        <div class="upd_parent_wrapper">
-            <div class="upd_profile_wrapper">
-                <h1>Update Profile</h1>
-                <form>
-                    <div class="upd-fName">
-                        <label for="upd-fName"></label>
-                        <div class="icon_input_wrapper">
-                            <i class="fas fa-user"></i>
+            <div class="upd_parent_wrapper">
+                <div class="profile_photo_Wrapper">
+                    <div class="profileImage">
+                        <a>
+                            <i class="fas fa-camera"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="upd_profile_wrapper">
+                    <form>
+                        <div class="label_input_wrapper upd-fName">
+                            <label for="upd-fName">User Name </label>
                             <input type="text" id="upd-fName" name="upd-fName" placeholder="First Name" required>
                         </div>
-                    </div>
-                    <div class="upd-lName">
-                        <label for="upd-lName"></label>
-                        <div class="icon_input_wrapper">
-                            <i class="fas fa-user"></i>
+                        <div class="label_input_wrapper upd-lName">
+                            <label for="upd-lName">Last Name</label>
                             <input type="text" id="upd-lName" name="upd-lName" placeholder="Last Name" required>
                         </div>
-                    </div>
-                    <div class="upd-email">
-                        <label for="upd-email"></label>
-                        <div class="icon_input_wrapper">
-                            <i class="fas fa-user"></i>
+                        <div class="label_input_wrapper upd-email">
+                            <label for="upd-email">Email</label>
                             <input type="email" id="upd-email" name="upd-email" placeholder="Email" required>
                         </div>
-                    </div>
-                    <div class="upd-pNumber">
-                        <label for="upd-pNumber"></label>
-                        <div class="icon_input_wrapper">
-                            <i class="fas fa-user"></i>
+                        <div class="label_input_wrapper upd-pNumber">
+                            <label for="upd-fName"> Phone Number </label>
                             <input type="text" id="upd-pNumber" name="upd-pNumber" placeholder="Phone Number" required>
                         </div>
-                    </div>
-                    <div class="upd-Address">
-                        <label for="upd-Address"></label>
-                        <div class="icon_input_wrapper">
-                            <i class="fas fa-user"></i>
+                        <div class="label_input_wrapper upd-Address">
+                            <label for="upd-fName"> Address </label>
                             <input type="text" id="upd-Address" name="upd-Address" placeholder="Address" required>
                         </div>
-                    </div>
-                    <div class="upd-Bio">
-                        <label for="upd-Bio"></label>
-                        <div class="icon_input_wrapper">
-                            <i class="fas fa-user"></i>
-                            <input type="text" id="upd-Bio" name="upd-Bio" placeholder="Bio" required>
+                        <div class="label_input_wrapper upd-Bio">
+                            <label for="upd-fName"> Professional <br> Information</label>
+                            <input type="text" id="upd-Bio" name="upd-Bio" placeholder="About yourself" required>
                         </div>
-                    </div>
-                    <div class="upd-password">
-                        <label for="upd-password"></label>
-                        <div class="icon_input_wrapper">
-                            <i class="fas fa-lock"></i>
-                            <input type="password" id="upd-password" name="upd-password" placeholder="Password"
-                                required>
+                        <div class="upd-buttons">
+                            <button type="submit" id="updBtn">UPDATE PROFILE</button><br>
                         </div>
-                    </div>
-                    <div class="upd-buttons">
-                        <button type="submit" id="updBtn">Sign Up</button><br>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </main>
-    <footer class="footer_Area">
-        <div class="mb_footer">
-            <p> &copy; Geniques 2022 </p>
-        </div>
-        <div class="dk_footer">
-            <div class="about-logo">
-                <img src="../img/Home_Genie_Logo_Footer.png" alt="Home Genie logo">
-            </div>
-            <div class="about-footer-nav1">
-                <nav>
-                    <ul>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Create New Listing</a></li>
-                        <li><a href="#">View Your Listing</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="about-footer-nav2">
-                <nav>
-                    <ul>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Cookie Policy</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="about-footer-nav3">
-                <nav>
-                    <ul>
-                        <li><a href="#">Let's Get Connected !!</a></li>
-                        <li><a href="#">+1 1234567890</a></li>
-                        <li><a href="#">abc@homegenie.ca</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </footer>
+    <script src="../js/script.js"></script>
     <script src="../js/updateProfile.js" defer></script>
 </body>
 
