added the links to header footer

--- a/html_Files/Search.html
+++ b/html_Files/Search.html
@@ -31,10 +31,10 @@
                     <a href="BrowseListings.html">Browse</a>
                 </li>
                 <li>
-                    <a href="">Create new</a>
+                    <a href="CreateListing.html">Create new</a>
                 </li>
                 <li>
-                    <a href="">Personal listings</a>
+                    <a href="SpecificListing.html">Personal listings</a>
                 </li>
                 <li>
                     <a href="AboutUs.html">About Us</a>
@@ -66,10 +66,10 @@
                 <a href="BrowseListings.html">Browse Listings</a>
             </li>
             <li>
-                <a href="#"> Create New Listing</a>
+                <a href="CreateListing.html"> Create New Listing</a>
             </li>
             <li>
-                <a href="#">View Your Listing</a>
+                <a href="SpecificListing.html">View Your Listing</a>
             </li>
             <li>
                 <a href="AboutUs.html">About Us</a>
@@ -165,8 +165,8 @@
                 <nav>
                     <ul>
                         <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Create New Listing</a></li>
-                        <li><a href="#">View Your Listing</a></li>
+                        <li><a href="CreateListing.html">Create New Listing</a></li>
+                        <li><a href="SpecificListing.html">View Your Listing</a></li>
                     </ul>
                 </nav>
             </div>
@@ -183,8 +183,8 @@
                 <nav>
                     <ul>
                         <li><a href="#">Let's Get Connected !!</a></li>
-                        <li><a href="#">+1 1234567890</a></li>
-                        <li><a href="#">abc@homegenie.ca</a></li>
+                        <li><a href="tel:+1123-456-7890">+1 1234567890</a></li>
+                        <li><a href="mailto:abc@homegenie.ca">abc@homegenie.ca</a></li>
                     </ul>
                 </nav>
             </div>
