--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -116,7 +116,7 @@
         <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create New Listing</a>
       </li>
       <li>
-        <a href="#"><i class="fas fa-eye"></i> View Your Listing</a>
+        <a href="SpecificListing.html"><i class="fas fa-eye"></i> View Your Listing</a>
       </li>
       <li>
         <a href="AboutUs.html"><i class="fa fa-users" aria-hidden="true"></i> About Us</a>
@@ -228,8 +228,8 @@
         <nav>
           <ul>
             <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Create New Listing</a></li>
-            <li><a href="#">View Your Listing</a></li>
+            <li><a href="CreateListing.html">Create New Listing</a></li>
+            <li><a href="SpecificListing.html">View Your Listing</a></li>
           </ul>
         </nav>
       </div>
@@ -246,8 +246,8 @@
         <nav>
           <ul>
             <li><a href="#">Let's Get Connected !!</a></li>
-            <li><a href="#">+1 1234567890</a></li>
-            <li><a href="#">abc@homegenie.ca</a></li>
+            <li><a href="tel:+1123-456-7890">+1 1234567890</a></li>
+            <li><a href="mailto:abc@homegenie.ca">abc@homegenie.ca</a></li>
           </ul>
         </nav>
       </div>
