Compressed the images  worked on the links in the navigation Need to fix View listing issue soon man... It is giving me headache

--- a/html_Files/Search.html
+++ b/html_Files/Search.html
@@ -28,13 +28,10 @@
             </a>
             <ul>
                 <li>
-                    <a href="BrowseListings.html">Browse</a>
+                    <a href="CreateListing.html">Create</a>
                 </li>
                 <li>
-                    <a href="CreateListing.html">Create new</a>
-                </li>
-                <li>
-                    <a href="SpecificListing.html">Personal listings</a>
+                    <a class="ViewListing">View Listings</a>
                 </li>
                 <li>
                     <a href="AboutUs.html">About Us</a>
@@ -63,37 +60,30 @@
         <ul>
             <!-- Add Links to the Pages when created -->
             <li>
-                <a href="BrowseListings.html">Browse Listings</a>
+              <a href="index.html"><i class="fas fa-home"></i> Home</a>
             </li>
             <li>
-                <a href="CreateListing.html"> Create New Listing</a>
+              <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create</a>
             </li>
             <li>
-                <a href="SpecificListing.html">View Your Listing</a>
+              <a class="ViewListing"><i class="fas fa-eye"></i> View Listing</a>
             </li>
             <li>
-                <a href="AboutUs.html">About Us</a>
+              <a href="AboutUs.html"><i class="fa fa-users" aria-hidden="true"></i> About Us</a>
             </li>
             <li>
-                <a href="UpdateProfile.html">
-                    Profile</a>
+              <a href="UpdateProfile.html">
+                <i class="fa fa-user" aria-hidden="true"></i> Profile</a>
             </li>
             <li>
-                <a href="Login.html"><strong>Logout?</strong></a>
+              <a href="Login.html"><strong><i class="fas fa-eye"></i> Logout?</strong></a>
             </li>
-        </ul>
+          </ul>
     </nav>
 
     <div class="Notification_wrapper">
         <div class="NotificationPopUpContainer">
             <div class="NotificationPopUp">
-                <div class="Notification_id1">
-                    <h3>Listing Name</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
-                    <div>
-                        <button>View Listing</button>
-                    </div>
-                </div>
                 <div class="Notification_id1">
                     <h3>Listing Name</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
