--- a/html_Files/UpdateProfile.html
+++ b/html_Files/UpdateProfile.html
@@ -34,11 +34,18 @@
             </div>
             <div class="upd_parent_wrapper">
                 <div class="profile_photo_Wrapper">
-                    <div class="profileImage">
-                        <a>
-                            <i class="fas fa-camera"></i>
-                        </a>
+                    <div class="CameraBtnWrapper">
                     </div>
+                    <!-- <div class="profileImage">
+                        <video id="video" class="videoContainer" autoplay></video>
+                        <canvas id="canvas" class="videoContainer"></canvas>
+                    </div> -->
+                    <!-- <a id="Open_Camera">
+                        <i class="fas fa-camera"></i>
+                    </a>
+                    <a href="SnapPicture" id="Stop_Camera">
+                        Stop
+                    </a> -->
                 </div>
                 <div class="upd_profile_wrapper">
                     <form>
@@ -70,6 +77,7 @@
                             <button type="submit" id="updBtn">UPDATE PROFILE</button><br>
                         </div>
                     </form>
+                 
                 </div>
             </div>
         </div>
