--- a/html_Files/Listing.html
+++ b/html_Files/Listing.html
@@ -41,18 +41,17 @@
             </a>
         </div>
         <div class="dk-menu">
-            <a href="#" id="dk-ShowNotificationPopUp">
-                <img src="../img/Notification_Genie.png" alt="Notification Genie">
-            </a>
             <ul>
                 <li>
-                    <a href="BrowseListings.html">Browse</a>
+                    <a href="#" id="dk-ShowNotificationPopUp">
+                        <img src="../img/Notification_Genie.png" alt="Notification Genie">
+                    </a>
                 </li>
                 <li>
-                    <a href="CreateListing.html">Create new</a>
+                    <a href="CreateListing.html">Create</a>
                 </li>
                 <li>
-                    <a href="SpecificListing.html">Personal listings</a>
+                    <a class="ViewListing">View listings</a>
                 </li>
                 <li>
                     <a href="AboutUs.html">About Us</a>
@@ -84,14 +83,10 @@
                 <a href="index.html"><i class="fas fa-home"></i> Home</a>
             </li>
             <li>
-                <a href="BrowseListings.html"><i class="fas fa-browser"></i><i class="fa fa-list"
-                        aria-hidden="true"></i> Browse Listings</a>
+                <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create</a>
             </li>
             <li>
-                <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create New Listing</a>
-            </li>
-            <li>
-                <a href="SpecificListing.html"><i class="fas fa-eye"></i> View Your Listing</a>
+                <a class="ViewListing"><i class="fas fa-eye"></i> View Listing</a>
             </li>
             <li>
                 <a href="AboutUs.html"><i class="fa fa-users" aria-hidden="true"></i> About Us</a>
@@ -109,13 +104,6 @@
     <div class="Notification_wrapper">
         <div class="NotificationPopUpContainer">
             <div class="NotificationPopUp">
-                <div class="Notification_id1">
-                    <h3>Listing Name</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
-                    <div>
-                        <button>View Listing</button>
-                    </div>
-                </div>
                 <div class="Notification_id1">
                     <h3>Listing Name</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
@@ -166,8 +154,8 @@
                 <nav>
                     <ul>
                         <li><a href="#">Let's Get Connected !!</a></li>
-                            <li><a href="tel:+1123-456-7890">+1 1234567890</a></li>
-                            <li><a href="mailto:abc@homegenie.ca">abc@homegenie.ca</a></li>
+                        <li><a href="tel:+1123-456-7890">+1 1234567890</a></li>
+                        <li><a href="mailto:abc@homegenie.ca">abc@homegenie.ca</a></li>
                     </ul>
                 </nav>
             </div>
