Corrected about us page mobile view

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -133,7 +133,7 @@
                         <p>Your Wishes, our Command !!</p>
                         <button type="button">Explore More</button>
                     </div>
-                    <img src="https://picsum.photos/500/500?random=11">
+                    <img src="../img/Home_Genie_Logo_Profile.png" alt="Home Genie Logo">
                 </div>
             </div>
             <div class="desktop-grid">
