--- a/html_Files/Login.html
+++ b/html_Files/Login.html
@@ -22,8 +22,8 @@
 <body>
     <div class="login-grid">
         <div class="login-desktop">
-            <img src="https://picsum.photos/600/400?random=11" alt="">
-            <h1>HOME GENIE</h1>
+            <img src="../img/Home_Genie_Logo_Profile.png" alt="Home Genie Logo">
+            <img src="../img/Home_Genie_Text_UpdateProfile.png" alt="Home Genie">
             <h2>New Here ?</h2>
             <a href="Signup.html" id="signUpBtn">Sign Up</a>
         </div>
