--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -133,7 +133,7 @@
             <div class="specific-color-top">
                 <div class="specific-grid">
                     <div class="specific-image">
-                        <img id="Listing_Image" src="https://picsum.photos/400/200?random=11" alt="">
+                        <img id="Listing_Image" src="../img/pexels-artem-podrez-4783330.jpg" alt="Blowdrying Session">
                     </div>
                     <div class="specific-contact-info">
                         <h2>Contact Information</h2>
@@ -153,8 +153,71 @@
             </div>
             <div class="specific-color-bottom">
                 <div class="specific-bids">
-
-                </div>
+                    <!-- <div class="specific-bid1">
+                        <div class="specific-bid-grid">
+                            <img src="https://picsum.photos/300/200?random=11" alt="">
+                            <div class="specific-bid-info">
+                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 35.00</span></p>
+                                <p><strong>Name: </strong>Nikkie Watson</p>
+                                <p><strong>Email: </strong>nikki@gmail.com</p>
+                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>   
+                            </div>
+                            <p><strong>Description: </strong>6 years eperience as a Professional Hairstylist. Working Currently at Poco Beauty Salon.</p>
+                        </div>
+                        <div class="specific-button-grid">
+                            <button type="button">Accept</button>
+                            <button type="button">Decline</button>
+                        </div>
+                    </div>
+                    <div class="specific-bid2">
+                        <div class="specific-bid-grid">
+                            <img src="https://picsum.photos/300/200?random=11" alt="">
+                            <div class="specific-bid-info">
+                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 38.00</span></p>
+                                <p><strong>Name: </strong>Anna Johnson</p>
+                                <p><strong>Email: </strong>anna@gmail.com</p>
+                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>
+                            </div>
+                            <p><strong>Description: </strong>7 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist for Dream Editorials.</p>
+                        </div>
+                        <div class="specific-button-grid">
+                            <button type="button">Accept</button>
+                            <button type="button">Decline</button>
+                        </div>
+                    </div>
+                    <div class="specific-bid3">
+                        <div class="specific-bid-grid">
+                            <img src="https://picsum.photos/300/200?random=11" alt="">
+                            <div class="specific-bid-info">
+                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 40.00</span></p>
+                                <p><strong>Name: </strong>Troy Smith</p>
+                                <p><strong>Email: </strong>troy@gmail.com</p>
+                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>
+                            </div>
+                            <p><strong>Description: </strong>10 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist professional photographers.</p>
+                        </div>
+                        <div class="specific-button-grid">
+                            <button type="button">Accept</button>
+                            <button type="button">Decline</button>
+                        </div>
+                    </div>
+                    <div class="specific-bid3">
+                        <div class="specific-bid-grid">
+                            <img src="https://picsum.photos/300/200?random=11" alt="">
+                            <div class="specific-bid-info">
+                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 40.00</span></p>
+                                <p><strong>Name: </strong>Troy Smith</p>
+                                <p><strong>Email: </strong>troy@gmail.com</p>
+                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>
+                            </div>
+                            <p><strong>Description: </strong>10 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist professional photographers.</p>
+                        </div>
+                        <div class="specific-button-grid">
+                            <button type="button">Accept</button>
+                            <button type="button">Decline</button>
+                        </div>
+                    </div> -->
+                </div> 
             </div>
 
             <div class="placeBidContainer">
