--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -42,9 +42,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="BrowseListings.html">Browse</a>
-                </li>
-                <li>
                     <a href="CreateListing.html">Create</a>
                 </li>
                 <li>
@@ -101,13 +98,6 @@
     <div class="Notification_wrapper">
         <div class="NotificationPopUpContainer">
             <div class="NotificationPopUp">
-                <div class="Notification_id1">
-                    <h3>Listing Name</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
-                    <div>
-                        <button>View Listing</button>
-                    </div>
-                </div>
                 <div class="Notification_id1">
                     <h3>Listing Name</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
@@ -198,7 +188,7 @@
         </div>
     </footer>
     <script src="../js/script.js" defer></script>
-    <script src="../js/specificListing.js"></script>
+    <script src="../js/specificListing.js" defer></script>
 </body>
 
 </html>
