links footer corrected

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -216,7 +216,7 @@
                     <ul>
                         <li><a href="#">Contact Us</a></li>
                         <li><a href="CreateListing.html">Create New Listing</a></li>
-                        <li><a href="SpecificListing.html">View Your Listing</a></li>
+                        <li><a class="ViewListing">View Your Listing</a></li>
                     </ul>
                 </nav>
             </div>
