correct the context of footer

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -213,8 +213,8 @@
         <nav>
           <ul>
             <li><a href="#">Contact Us</a></li>
-            <li><a href="CreateListing.html">Create New Listing</a></li>
-            <li><a class="ViewListing">View Your Listing</a></li>
+            <li><a href="CreateListing.html">Create </a></li>
+            <li><a class="ViewListing">View Listings</a></li>
           </ul>
         </nav>
       </div>
