--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -225,8 +225,8 @@
                     <nav>
                         <ul>
                             <li><a href="#">Contact Us</a></li>
-                            <li><a href="CreateListing.html">Create New Listing</a></li>
-                            <li><a class="ViewListing">View Your Listing</a></li>
+                            <li><a href="CreateListing.html">Create </a></li>
+                        <li><a class="ViewListing">View Listings</a></li>
                         </ul>
                     </nav>
                     
