Added the functionality on the customer acceptance owner acceptance. and info display.

--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -147,6 +147,10 @@
             <div class="placeBidContainer">
 
             </div>
+            <div class="CustomerBidAcceptContainer">
+            </div>
+            <div class="AceeptedOfferDetailContainer">
+            </div>
         </div>
     </main>
 
