--- a/html_Files/UpdateProfile.html
+++ b/html_Files/UpdateProfile.html
@@ -34,20 +34,18 @@
             </div>
             <div class="upd_parent_wrapper">
                 <div class="profile_photo_Wrapper">
-                    <div class="CameraBtnWrapper">
+                    <div class="profileImage">
+                        <video id="video" width="320" height="240" autoplay></video>
+                        <canvas id="canvas" width="320" height="240"></canvas>
                     </div>
-                    <!-- <div class="profileImage">
-                        <video id="video" class="videoContainer" autoplay></video>
-                        <canvas id="canvas" class="videoContainer"></canvas>
-                    </div> -->
-                    <!-- <a id="Open_Camera">
+                </div>
+                <div class="upd_profile_wrapper">
+                    <a id="Open_Camera">
                         <i class="fas fa-camera"></i>
                     </a>
                     <a href="SnapPicture" id="Stop_Camera">
                         Stop
-                    </a> -->
-                </div>
-                <div class="upd_profile_wrapper">
+                    </a>
                     <form>
                         <div class="label_input_wrapper upd-fName">
                             <label for="upd-fName">User Name </label>
@@ -77,7 +75,7 @@
                             <button type="submit" id="updBtn">UPDATE PROFILE</button><br>
                         </div>
                     </form>
-                 
+
                 </div>
             </div>
         </div>
