--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -142,19 +142,19 @@
                     <h2>Why Choose Us?</h2>
                     <div class="about-choose-item1">
                         <span><i class="fa-solid fa-star"></i></span>
-                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <p>Low Cost Professional Service</p>
                     </div>
                     <div class="about-choose-item2">
                         <span><i class="fa-solid fa-gear"></i></span>
-                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <p>Get Great Deals</p>
                     </div>
                     <div class="about-choose-item3">
                         <span><i class="fa-solid fa-earth-europe"></i></span>
-                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <p>Save Time and Efforts</p>
                     </div>
                     <div class="about-choose-item4">
                         <span><i class="fa-solid fa-location-dot"></i></span>
-                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <p>Get Recognized</p>
                     </div>
                 </div>
             </div>
