Added the script fo the about us page.

--- a/html_Files/UpdateProfile.html
+++ b/html_Files/UpdateProfile.html
@@ -35,8 +35,8 @@
             <div class="upd_parent_wrapper">
                 <div class="profile_photo_Wrapper">
                     <div class="profileImage">
-                        <video id="video" width="320" height="240" autoplay></video>
-                        <canvas id="canvas" width="320" height="240"></canvas>
+                        <video id="video"  autoplay></video>
+                        <canvas id="canvas" ></canvas>
                     </div>
                 </div>
                 <div class="upd_profile_wrapper">
