--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -138,7 +138,7 @@
                     <div class="img-payment">
                         <div class="img-info">
                             <div class="img-clicked-info">
-                                <img src="https://picsum.photos/1200/600?random=1" alt="random image">
+                                <img id="UploadedImage" alt="random image">
                                 <span class="img-title">Lorem</span>
                             </div>
                             <div class="button-div">
@@ -226,10 +226,10 @@
                         <ul>
                             <li><a href="#">Contact Us</a></li>
                             <li><a href="CreateListing.html">Create </a></li>
-                        <li><a class="ViewListing">View Listings</a></li>
+                            <li><a class="ViewListing">View Listings</a></li>
                         </ul>
                     </nav>
-                    
+
                 </div>
                 <div class="about-footer-nav2">
                     <nav>
