--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -139,81 +139,20 @@
                         photo ready look. Serious Enquires only can Email or Contact at above provided details.</p>
                 </div>
             </div>
-            <div class="specific-color-bottom">
-                <div class="specific-bids">
-                    <!-- <div class="specific-bid1">
-                        <div class="specific-bid-grid">
-                            <img src="https://picsum.photos/300/200?random=11" alt="">
-                            <div class="specific-bid-info">
-                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 35.00</span></p>
-                                <p><strong>Name: </strong>Nikkie Watson</p>
-                                <p><strong>Email: </strong>nikki@gmail.com</p>
-                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>   
-                            </div>
-                            <p><strong>Description: </strong>6 years eperience as a Professional Hairstylist. Working Currently at Poco Beauty Salon.</p>
-                        </div>
-                        <div class="specific-button-grid">
-                            <button type="button">Accept</button>
-                            <button type="button">Decline</button>
-                        </div>
-                    </div>
-                    <div class="specific-bid2">
-                        <div class="specific-bid-grid">
-                            <img src="https://picsum.photos/300/200?random=11" alt="">
-                            <div class="specific-bid-info">
-                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 38.00</span></p>
-                                <p><strong>Name: </strong>Anna Johnson</p>
-                                <p><strong>Email: </strong>anna@gmail.com</p>
-                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>
-                            </div>
-                            <p><strong>Description: </strong>7 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist for Dream Editorials.</p>
-                        </div>
-                        <div class="specific-button-grid">
-                            <button type="button">Accept</button>
-                            <button type="button">Decline</button>
-                        </div>
-                    </div>
-                    <div class="specific-bid3">
-                        <div class="specific-bid-grid">
-                            <img src="https://picsum.photos/300/200?random=11" alt="">
-                            <div class="specific-bid-info">
-                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 40.00</span></p>
-                                <p><strong>Name: </strong>Troy Smith</p>
-                                <p><strong>Email: </strong>troy@gmail.com</p>
-                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>
-                            </div>
-                            <p><strong>Description: </strong>10 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist professional photographers.</p>
-                        </div>
-                        <div class="specific-button-grid">
-                            <button type="button">Accept</button>
-                            <button type="button">Decline</button>
-                        </div>
-                    </div>
-                    <div class="specific-bid3">
-                        <div class="specific-bid-grid">
-                            <img src="https://picsum.photos/300/200?random=11" alt="">
-                            <div class="specific-bid-info">
-                                <p><strong>Bidded Price: </strong><span class="specific-red">$ 40.00</span></p>
-                                <p><strong>Name: </strong>Troy Smith</p>
-                                <p><strong>Email: </strong>troy@gmail.com</p>
-                                <p><strong>Phone Number: </strong>+1 111-111-1111</p>
-                            </div>
-                            <p><strong>Description: </strong>10 years eperience as a Professional Hairstylist. Working Currently as Hair Stylist professional photographers.</p>
-                        </div>
-                        <div class="specific-button-grid">
-                            <button type="button">Accept</button>
-                            <button type="button">Decline</button>
-                        </div>
-                    </div> -->
-                </div> 
-            </div>
 
-            <div class="placeBidContainer">
-
-            </div>
-            <div class="CustomerBidAcceptContainer">
-            </div>
-            <div class="AceeptedOfferDetailContainer">
+            <div class="dynamic_info_Container">
+                <div class="specific-color-bottom">
+                    <div class="specific-color-bottom-dk-wrapper">
+                        <div class="specific-bids">
+                        </div>
+                    </div>
+                </div>
+                <div class="placeBidContainer">
+                </div>
+                <div class="CustomerBidAcceptContainer">
+                </div>
+                <div class="AceeptedOfferDetailContainer">
+                </div>
             </div>
         </div>
     </main>
