--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -9,9 +9,9 @@
 
     <meta name="description" content="A Bidding platform for the people to bid on the home services of other people">
     <link rel="manifest" href="../app.webmanifest">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css"
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css"
         integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
@@ -119,7 +119,7 @@
                         <h1>Genique</h1>
                         <h2>Home Genie</h2>
                         <p>Your Wishes, our Command !!</p>
-                        <button type="button">Explore More</button>
+                        <a href="index.html"><button type="button">Explore More</button></a>
                     </div>
                     <img src="../img/LOGO_tranparent-03.png" alt="Home Genie Logo">
                 </div>
@@ -141,19 +141,23 @@
                 <div class="about-choose">
                     <h2>Why Choose Us?</h2>
                     <div class="about-choose-item1">
-                        <span><i class="fa-solid fa-star"></i></span>
+                        <!-- <span><i class="fa-solid fa-star"></i></span> -->
+                        <span class="iconify" data-icon="akar-icons:star"></span>
                         <p>Low Cost Professional Service</p>
                     </div>
                     <div class="about-choose-item2">
-                        <span><i class="fa-solid fa-gear"></i></span>
+                        <!-- <span><i class="fa-solid fa-gear"></i></span> -->
+                        <span class="iconify" data-icon="bytesize:settings"></span>
                         <p>Get Great Deals</p>
                     </div>
                     <div class="about-choose-item3">
-                        <span><i class="fa-solid fa-earth-europe"></i></span>
+                        <!-- <span><i class="fa-solid fa-earth-europe"></i></span> -->
+                        <span class="iconify" data-icon="clarity:network-globe-outline-badged"></span>
                         <p>Save Time and Efforts</p>
                     </div>
                     <div class="about-choose-item4">
-                        <span><i class="fa-solid fa-location-dot"></i></span>
+                        <!-- <span><i class="fa-solid fa-location-dot"></i></span> -->
+                        <span class="iconify" data-icon="bytesize:location"></span>
                         <p>Get Recognized</p>
                     </div>
                 </div>
@@ -248,6 +252,7 @@
             });
         });
     </script>
+    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
 </body>
 
 </html>
