Sign up grid layout modified

--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -23,7 +23,7 @@
 <body>
     <div class="signup-grid">
         <div class="signup-desktop">
-            <img src="https://picsum.photos/600/400?random=11" alt="">
+            <img src="../img/Home_Genie_Logo_Profile2.png" alt="">
             <h1>HOME GENIE</h1>
             <h2>Welcome Back</h2>
             <a href="login.html" id="LoginBtn">Login</a>
