corrected the icons of signup

--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -39,7 +39,7 @@
                             <div class="First_Name">
                                 <label for="SignUp_fName"></label>
                                 <div class="icon_input_wrapper">
-                                    <i class="fas fa-user"></i>
+                                    <span class="iconify" data-icon="ant-design:user-outlined"></span>
                                     <input type="text" id="SignUp_fName" name="SignUp_fName" placeholder="UserName"
                                         required>
                                 </div>
@@ -47,7 +47,7 @@
                             <div class="Last_Name">
                                 <label for="SignUp_lName"></label>
                                 <div class="icon_input_wrapper">
-                                    <i class="fas fa-user"></i>
+                                    <span class="iconify" data-icon="ant-design:user-outlined"></span>
                                     <input type="text" id="SignUp_lName" name="SignUp_lName" placeholder="Last Name"
                                         required>
                                 </div>
@@ -56,7 +56,7 @@
                             <div class="Email">
                                 <label for="SignUp_email"></label>
                                 <div class="icon_input_wrapper">
-                                    <i class="fas fa-envelope"></i>
+                                    <span class="iconify" data-icon="ant-design:mail-outlined"></span>
                                     <input type="email" id="SignUp_email" name="SignUp_email" placeholder="Email"
                                         required>
                                 </div>
@@ -66,7 +66,7 @@
                             <div class="Password">
                                 <label for="SignUp_password"></label>
                                 <div class="icon_input_wrapper">
-                                    <i class="fas fa-lock"></i>
+                                    <span class="iconify" data-icon="bx:lock"></span>
                                     <input type="password" id="SignUp_password" name="SignUp_password"
                                         placeholder="Password" required>
                                 </div>
@@ -75,7 +75,7 @@
                                 <label for="SignUp_cPassword"></label>
                                 <div class="icon_input_wrapper">
                                     <!-- <i class="fas fa-user"></i> -->
-                                    <i class="fas fa-check"></i>
+                                    <span class="iconify" data-icon="charm:circle-tick"></span>
                                     <input type="text" id="SignUp_cPassword" name="SignUp_cPassword"
                                         placeholder="Confirm Password" required>
                                 </div>
@@ -83,7 +83,7 @@
                             <div class="Phone_Number">
                                 <label for="SignUp_phoneNumber"></label>
                                 <div class="icon_input_wrapper">
-                                    <i class="fas fa-phone"></i>
+                                    <span class="iconify" data-icon="akar-icons:phone"></span>
                                     <input type="text" id="SignUp_phoneNumber" name="SignUp_phoneNumber"
                                         placeholder="Phone Number" required>
                                 </div>
@@ -91,7 +91,7 @@
                             <div class="Address">
                                 <label for="SignUp_address"></label>
                                 <div class="icon_input_wrapper">
-                                    <i class="fas fa-address-book"></i>
+                                    <span class="iconify" data-icon="ph:address-book-light" style="font-size: 400px;"></span>
                                     <input type="text" id="SignUp_address" name="SignUp_address" placeholder="Address"
                                         required>
                                 </div>
@@ -180,6 +180,7 @@
     </main> -->
     <footer></footer>
     <script src="../js/signup.js" defer></script>
+    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
 </body>
 
 </html>
