corrected the file

--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -91,7 +91,7 @@
                             <div class="Address">
                                 <label for="SignUp_address"></label>
                                 <div class="icon_input_wrapper">
-                                    <span class="iconify" data-icon="ph:address-book-light" style="font-size: 400px;"></span>
+                                    <span class="iconify" data-icon="ph:address-book-light" ></span>
                                     <input type="text" id="SignUp_address" name="SignUp_address" placeholder="Address"
                                         required>
                                 </div>
