--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -83,15 +83,17 @@
           <a href="#" class="ProfileIcon">
             <i title="Profile" class="far fa-user-circle"></i>
           </a>
-          <div class="subProfileMenu">
-            <ul>
-              <li>
-                <a href="UpdateProfile.html">Profile</a>
-              </li>
-              <li>
-                <a href="Login.html">Logout</a>
-              </li>
-            </ul>
+          <div id="ProfileContainer">
+            <div class="subProfileMenu">
+              <ul>
+                <li>
+                  <a href="UpdateProfile.html">Profile</a>
+                </li>
+                <li>
+                  <a id="logoutBtn">Logout</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </li>
       </ul>
