changes made to form in signup

--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -26,7 +26,7 @@
             <img src="../img/Home_Genie_Logo_Profile2.png" alt="">
             <img src="../img/Home_Genie_Text_UpdateProfile.png" alt="Home Genie">
             <h2>Welcome Back</h2>
-            <a href="login.html" id="LoginBtn">Login</a>
+            <a href="login.html" id="LoginBtn">LOGIN</a>
         </div>
         <div class="signup-mobile">
             <div class="signup-parent">
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                             <div class="SignUp-buttons">
-                                <button type="submit" id="SignUpBtn">Sign Up</button><br>
+                                <button type="submit" id="SignUpBtn">SIGN UP</button><br>
                                 <p class="mb-LoginLink">Already User? <a href="Login.html" class="SignUPLoginBtn"> Login</a></p>
                             </div>
                             <div class="errorContainr">
