--- a/html_Files/UpdateProfile.html
+++ b/html_Files/UpdateProfile.html
@@ -71,6 +71,14 @@
                             <label for="upd-fName"> Professional <br> Information</label>
                             <input type="text" id="upd-Bio" name="upd-Bio" placeholder="About yourself" required>
                         </div>
+                        <div class="login-password">
+                            <label for="upd-password"></label>
+                            <div class="icon_input_wrapper">
+                                <!-- <i class="fas fa-lock"></i> -->
+                                <span class="iconify" data-icon="bx:lock"></span>
+                                <input class="upd-password" type="password" id="upd-password" name="login-password" placeholder="Password" required>
+                            </div>
+                        </div>
                         <div class="upd-buttons">
                             <button type="submit" id="updBtn">UPDATE PROFILE</button><br>
                         </div>
