Minor fixes and notificaftion code removed

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -13,6 +13,7 @@
 
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
+  <link rel="icon" type="image/x-icon" href="../icon/Home_Genie_DK_Logo.ico">
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css">
@@ -130,13 +131,6 @@
   <div class="Notification_wrapper">
     <div class="NotificationPopUpContainer">
       <div class="NotificationPopUp">
-        <div class="Notification_id1">
-          <h3>Listing Name</h3>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
-          <div>
-            <button>View Listing</button>
-          </div>
-        </div>
       </div>
       <div class="triangle"></div>
     </div>
